language/move-prover/tests/sources/functional/aborts-if.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/aborts-if.move:35:9 ───
    │
 35 │         aborts_if _x <= _y;
    │         ^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/aborts-if.move:32:5: abort2_incorrect (entry)
    =     at tests/sources/functional/aborts-if.move:32:5: abort2_incorrect (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/aborts-if.move:51:9 ───
    │
 51 │         aborts_if x <= y;
    │         ^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/aborts-if.move:47:5: abort4_incorrect (entry)
    =     at tests/sources/functional/aborts-if.move:48:9: abort4_incorrect
    =     at tests/sources/functional/aborts-if.move:47:5: abort4_incorrect (exit)

error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/aborts-if.move:55:5 ───
    │
 55 │ ╭     fun abort5_incorrect(x: u64, y: u64) {
 56 │ │         if (x <= y) abort 1
 57 │ │     }
    │ ╰─────^
    ·
 56 │         if (x <= y) abort 1
    │         ------------------- abort happened here
    │
    =     at tests/sources/functional/aborts-if.move:55:5: abort5_incorrect (entry)
    =     at tests/sources/functional/aborts-if.move:56:9: abort5_incorrect (ABORTED)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/aborts-if.move:67:9 ───
    │
 67 │         aborts_if x <= y;
    │         ^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/aborts-if.move:63:5: abort6_incorrect (entry)
    =     at tests/sources/functional/aborts-if.move:64:9: abort6_incorrect
    =     at tests/sources/functional/aborts-if.move:63:5: abort6_incorrect (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/aborts-if.move:90:9 ───
    │
 90 │         aborts_if x == y;
    │         ^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/aborts-if.move:85:5: multi_abort2_incorrect (entry)
    =     at tests/sources/functional/aborts-if.move:86:9: multi_abort2_incorrect
    =     at tests/sources/functional/aborts-if.move:85:5: multi_abort2_incorrect (exit)

error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/aborts-if.move:94:5 ───
    │
 94 │ ╭     fun multi_abort3_incorrect(_x: u64, _y: u64) {
 95 │ │         abort 1
 96 │ │     }
    │ ╰─────^
    ·
 95 │         abort 1
    │         ------- abort happened here
    │
    =     at tests/sources/functional/aborts-if.move:94:5: multi_abort3_incorrect (entry)
    =     at tests/sources/functional/aborts-if.move:95:9: multi_abort3_incorrect (ABORTED)

error:  A postcondition might not hold on this return path.

     ┌── tests/sources/functional/aborts-if.move:118:9 ───
     │
 118 │         aborts_if true;
     │         ^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/aborts-if.move:112:5: multi_abort5_incorrect (entry)
     =     at tests/sources/functional/aborts-if.move:113:9: multi_abort5_incorrect
     =     at tests/sources/functional/aborts-if.move:112:5: multi_abort5_incorrect (exit)
